fix for ios system dark mode css and img drag

--- a/src/App.css
+++ b/src/App.css
@@ -4,17 +4,13 @@
   width: 100%;
   height: 100%;
 }
-p{
+div{
   color: black;
 }
 input{
   background-color: white;
-  color: black;
 }
 h1, h2, h3, h4, h5, h6{
-  color: black;
-}
-label{
   color: black;
 }
 textarea{
